
2007-07-02 cjg/tdb
 * close-quote is now a seperating character, rather than mapping to quote.
    this should fix bug #3048

2007-07-02 tdb/cjg
 * #3061 - define STAFF_ONLY as FALSE as well as TRUE, otherwise we can never
    test its falseness
 * #3050 - only attempt to generate a thumbnail if the main file exists
 * #3049 - don't remove content from hidden directories in /documents (i.e. be
    svn friendly)
 * #3037 - if a set has a value of "" then the option will render as 
    UNSPECIFIED unless explicitly defined in a phrase.
 * #3065 - Fixed bug that .txt files never indexed.

2007-07-02 cjg
 * Fixed problem with searching subjects in input forms. #2962

2007-07-20 cjg
 * Added "binmode" to some file opens for Harry.

2007-08-13 cjg
 * Removed unneeded "use" from Utils.pm

2007-08-13 cjg
 * Added experimental (not yet used) method for reading from the beast.

2007-08-13 cjg
 * Tidied Abstract search to be easier to subclass export plugin list.

2007-08-15 cjg
 * Fixed weird sort of error which didn't fail but should in xhtml_help.
 * Added support for <title> override in workflow.

2007-08-22 tmb
 * Fixed "action" parameter not being included in redirect_to_me_url

2007-08-28 cjg
 * Added config. hook to override current_user 
 * Added config hook to set the URL to go to if there is no current_user
 * Import::DefaultXML now disposes of no-longer needed XML chunks, stopping
    memory links if using XML::DOM
 * Added method for caching all subjects. generate_views now uses these 
    which gives a notable speed up.
 * Added on_logout hook which is called when the login page is accessed
    which allows non-eprints login cookies to be hosed.
 
2007-08-31 tmb
 * Fixed "for:value:relative:" autocomplete IDs not working under IE

2007-09-03 cjg
 * current_user now returns undef if working offline. Fixing #3091

2007-10-19 cjg
 * Prevented warning in case of undefined subject-name-language.
