@@ -1995,8 +1995,10 @@ sub get_property_defaults
 		type 		=> $EPrints::MetaField::REQUIRED,
 		sub_name	=> $EPrints::MetaField::UNDEF,
 		parent_name	=> $EPrints::MetaField::UNDEF,
+
 		help_xhtml	=> $EPrints::MetaField::UNDEF,
 		title_xhtml	=> $EPrints::MetaField::UNDEF,
+		join_path	=> $EPrints::MetaField::UNDEF,
 );
 }
 		
