@@ -6557,3 +6557,7 @@ PACKAGE: 2.2.99.2
 2007-10-19 cjg
  * Prevented warning in case of undefined subject-name-language.
 
+2007-10-19 cjg
+ * Added basic changes for searching chained fields eg. documents.format
+ * Fixed bug is date/time searches
+ * Fixed issue with double escaping in citations.
